# azure-portal-api

./: Cargo.toml  README.md
src/: main.rs
